cluster/ghost/deployment-ghost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost-deployment
  namespace: ghost
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      nodeSelector:
        role: apps
      containers:
        - env:
            - name: url
              value: "https://christmas.nathanv.app"
            - name: database__client
              value: mysql
            - name: database__connection__host
              value: ghost-mysql-service.ghost.svc.cluster.local
            - name: mail__transport
              value: SMTP
            - name: mail__options__port
              value: "587"
            - name: mail__from
              value: Ghost <ghost@nvaughn.email>
          image: cr.nathanv.app/docker.io/library/ghost:6.62.0
          # 6.4.0 not aviable on amd64
          # hash issue with 6.10.3
          name: ghost
          ports:
            - containerPort: 2368
          volumeMounts:
            - mountPath: /var/lib/ghost/content
              name: ghost-vol
      volumes:
        - name: ghost-vol
          persistentVolumeClaim:
            claimName: ghost-pvc
