cluster/ghost/deployment-mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ghost-mysql-deployment
  namespace: ghost
spec:
  replicas: 1
  serviceName: ghost-mysql
  selector:
    matchLabels:
      app: ghost-mysql
  template:
    metadata:
      labels:
        app: ghost-mysql
    spec:
      nodeSelector:
        role: apps
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999
      containers:
        - env:
            - name: MYSQL_RANDOM_ROOT_PASSWORD
              value: "1"
          image: cr.nathanv.app/docker.io/library/mysql:26.7.0
          name: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-vol
      volumes:
        - name: mysql-vol
          persistentVolumeClaim:
            claimName: ghost-pvc-mysql
