cluster/ghost/service-ghost.yaml
apiVersion: v1
kind: Service
metadata:
    name: ghost-service
    namespace: ghost
spec:
    type: ClusterIP
    selector:
        app: ghost
    ports:
      - port: 2368
        protocol: TCP
