cluster/ghost/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost-mysql-service
  namespace: ghost
spec:
  type: ClusterIP
  selector:
    app: ghost-mysql
  ports:
    - port: 3306
      protocol: TCP
